<resources>
    <string name="app_name">Drawing App</string>
    <string name="importImage">Import</string>
    <string name="undo">Undo</string>
    <string name="brushsize">BrushSize</string>
    <string name="saveimage">saveImage</string>
    <string name="please_wait">Please wait...</string>
    <string name="pickcolor">Color</string>
    <string name="select_a_color">Select a Color</string>
</resources>