<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/fl_drawing_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:padding="1dp"
        android:background="@drawable/drawing_view_background"
        app:layout_constraintBottom_toTopOf="@id/ll_option_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/test"
            />
        <com.example.drawingapp.DrawingView
            android:id="@+id/drawing_view"
            android:background="#80FFFFFF"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </FrameLayout>



    <LinearLayout
        android:id="@+id/ll_option_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/ib_current_color"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@color/black"
            android:src="@drawable/pallet_normal"
            android:tag="@color/black"

            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/ib_image"
            android:src="@drawable/picture"
            android:scaleType="fitXY"
            android:contentDescription="@string/importImage"
            android:background="@color/white"
            android:tooltipText="Import"
            />
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/ib_undo"
            android:src="@drawable/undo"
            android:scaleType="fitXY"
            android:contentDescription="@string/undo"
            android:background="@color/white"
            android:tooltipText="Undo"
            />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/ib_color"
            android:src="@drawable/color"
            android:scaleType="fitXY"
            android:background="@color/white"
            android:contentDescription="@string/pickcolor"
            android:tooltipText="Pick color"
            />


            />
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/ib_brush"
            android:src="@drawable/brush"
            android:scaleType="fitXY"
            android:background="@color/white"
            android:contentDescription="@string/brushsize"
            android:tooltipText="Choose Brush Size"
            />
        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:id="@+id/ib_save"
            android:src="@drawable/save"
            android:scaleType="fitXY"
            android:background="@color/white"
            android:contentDescription="@string/saveimage"
            android:tooltipText="Save Image"

            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
